--- a/index.html
+++ b/index.html
@@ -1,1 +1,7 @@
-Hello World
+---
+layout: default
+title: William F Godoy
+---
+<div class="blurb">
+	<h1>Hi there, I'm William F Godoy!</h1>
+</div>
